# arduino-archetype

./: CMakeLists.txt  README.md  archetype.ino  build-and-monitor.bat  clean.bat  lib-install.bat  serial.bat  upload.bat  verify.bat
src/: Application.cpp  Application.h
